<resources>
    <string name="app_name">One shop</string>
    <string name="phone">Phone number</string>
    <string name="password">Password</string>
    <string name="Fpass">Forgot your password?</string>
    <string name="Login">Log In</string>
    <string name="Sign">Sign Up</string>
    <string name="Account">Don\'t have an account?</string>
    <string name="Fname">First Name</string>
    <string name="Lname">Last Name</string>
    <string name="Pnum">Phone Number</string>
    <string name="Dist">District</string>
    <string name="Cadd">Current Address</string>
    <string name="email">email(optional)</string>
    <string name="profile">Edit Profile</string>
    <string name="changes">Save Changes</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_rating">Rating</string>
    <string name="title_activity_contact">Contact</string>
</resources>
