<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"
    tools:context=".Login">

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_button"
        android:text="@string/Login"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_forgot_password" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/shape_edittext"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_phone" />

    <EditText
        android:id="@+id/edittext_phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_edittext"
        android:drawableStart="@drawable/icon_call"
        android:drawablePadding="10dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/textview_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/Fpass"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/edittext_password"
        app:layout_constraintTop_toBottomOf="@+id/edittext_password" />

    <TextView
        android:id="@+id/textview_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/Account"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_login"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="@+id/button_login" />

    <TextView
        android:id="@+id/textview_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign"
        android:textColor="@android:color/background_light"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/textview_"
        app:layout_constraintStart_toEndOf="@+id/textview_"
        app:layout_constraintTop_toTopOf="@+id/textview_"
        app:layout_constraintVertical_bias="0.61" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/brown">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageview_exit"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/icon_close"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textview_logo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="96dp"
                    android:text="@string/app_name"
                    android:textAllCaps="true"
                    android:textColor="@android:color/background_light"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageview_exit"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.533" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


</androidx.constraintlayout.widget.ConstraintLayout>